security_groups.tf
resource "aws_security_group" "Sg-desafio-vpc" {
  description = "acesso aos asuarios"
  egress = [{
    cidr_blocks      = ["0.0.0.0/0"]
    description      = ""
    from_port        = 0
    ipv6_cidr_blocks = []
    prefix_list_ids  = []
    protocol         = "-1"
    security_groups  = []
    self             = false
    to_port          = 0
  }]
  ingress = [{
    cidr_blocks      = ["0.0.0.0/0"]
    description      = "acesso liberado"
    from_port        = 3001
    ipv6_cidr_blocks = []
    prefix_list_ids  = []
    protocol         = "tcp"
    security_groups  = []
    self             = false
    to_port          = 3001
    },
    {
    cidr_blocks      = ["SEU IP" ]
    description      = "acesso ip"
    from_port        = 22
    ipv6_cidr_blocks = []
    prefix_list_ids  = []
    protocol         = "tcp"
    security_groups  = []
    self             = false
    to_port          = 22
    }
    ]

    name                   = "Sg-Desafio-Set"
    name_prefix            = null
    revoke_rules_on_delete = null
    tags                   = {}
    tags_all               = {}
    vpc_id                 = local.vpc_id
    
}
